[package]
name = "swapbytes"
version = "0.1.0"
edition = "2021"

[dependencies]
# runtime for async applications
tokio = { version = "1.38.1", features = ["full"] }
# make async fn in traits work with dyn traits
async-trait = "0.1.81"
# futures and streams
futures = "0.3.30"
# libp2p
libp2p = { version = "0.53.2",features = ["tokio", "gossipsub", "noise", "macros", "tcp", "quic", "yamux", "rendezvous", "ping", "identify", "kad", "mdns","request-response","cbor"]}
# allows easy logging style functionality with asynchronous programs
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

clap = { version = "4.5.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = "1.10.6"